--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-scripts": "4.0.3",
-		"styled-components": "^5.3.1"
+		"react-router": "5.2.1"
 	},
 	"scripts": {
 		"start": "react-scripts start",
